# ln-scraper

./: Cargo.toml  LICENSE  README  rustfmt.toml
ln-cli/: Cargo.toml
ln-cli/src/: main.rs  menu.rs
ln-lib/: Cargo.toml
ln-lib/src/: lib.rs
ln-lib/src/cfg/: mod.rs
ln-lib/src/err/: mod.rs  surferror.rs
ln-lib/src/err/scrapererror/: chaptererror.rs  lightnovelerror.rs  listerror.rs  mod.rs
ln-lib/src/lightnovel/: mod.rs  scrape.rs
ln-lib/src/ln/: mod.rs  scrape.rs
ln-lib/src/lncat/: mod.rs
ln-lib/src/lncha/: mod.rs  scrape.rs
ln-lib/src/lnl/: mod.rs  scrape.rs
ln-lib/src/scrape/: chapter.rs  lightnovel.rs  mod.rs  paragraph.rs
