[package]
name = "ln-lib"
description = "A little lib to scrape lightnovels"
version = "2.0.0"
authors = ["HaxSam <haxsam@pm.me>"]
repository = "https://github.com/HaxSam/ln-scraper"
license = "MIT"
edition = "2021"

[dependencies]
surf = "2.3.2"
serde = "1.0.89"
scraper = "0.12.0"
thiserror = "1.0.37"
once_cell = "1.15.0"
url = "2.3.1"
